fix overflow in Hero

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -4,6 +4,7 @@
 	min-height: 65rem;
 	height: 67.5rem;
 	position: relative;
+	overflow-x: hidden;
 
 	.flex {
 		height: 100%;
